# mini-jvm

./: .clang-format  .gitignore  CMakeLists.txt
src/: main.cpp
src/vm/classfile/: attribute.h  class_file.cpp  class_file.h  constant_pool.h  member_info.h
src/vm/common/: types.h  utils.h
src/vm/interpreter/: interpreter.cpp  interpreter.h  jvm_opcode.h
src/vm/loader/: class_loader.cpp  class_loader.h
src/vm/native/: native_registry.cpp  native_registry.h
src/vm/runtime/: acc.h  java_class.h  java_object.h  slots.h  stack_frame.h  thread.h
